--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -13,11 +13,24 @@
     margin: 0;
     padding: 0;
     height: 100%;
+    width: 100%
   }
 
   *,
   *:before,
   *:after {
     box-sizing: inherit;
+    font-family: 'Open Sans', sans-serif;
+  }
+
+  /** Background Colours **/
+
+  html {
+    background:
+      -webkit-radial-gradient(closest-corner,rgba(16,47,70,0) 60%,rgba(16,47,70,0.26)),-webkit-linear-gradient(108deg,#26d0ce,#1a2980 90%);
+  }
+  
+  body {
+    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAB9JREFUeNpiZmBg6AZiDiBWZ4YyQMCOCcYA4kMAAQYAHyYCCUdxidgAAAAASUVORK5CYII=');
   }
 }
